// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comment-only.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
// only a line comment
}

{
// first
// second
}

{/* block */
// then line
}

{// line
/* then block */}

text {
// line comment in text expression
} text

{/* block comment only */}

=====================================output=====================================
{
// only a line comment
}

{
// first
// second
}

{
/* block */
// then line
}

{
// line
/* then block */
}

text {
// line comment in text expression
} text

{/* block comment only */}

================================================================================
`;

exports[`comment-only.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
// only a line comment
}

{
// first
// second
}

{/* block */
// then line
}

{// line
/* then block */}

text {
// line comment in text expression
} text

{/* block comment only */}

=====================================output=====================================
{
  // only a line comment
}

{
  // first
  // second
}

{
  /* block */
  // then line
}

{
  // line
  /* then block */
}

text {
  // line comment in text expression
} text

{/* block comment only */}

================================================================================
`;

exports[`expression-comments.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
/**
 * leading JSDoc
 */
foo()}

{// leading line comment
foo()}

text {/* leading */ foo()} text

text {
// leading line comment in text expression
foo()
} text

{
/**
 * some JSDoc
 */
here.is.some.expression()

/**
 * @param {unknown} x
 */}
export function f(x) {}

{foo()
// trailing line comment
}

{foo() // same line comment
}

<A b={foo()
// trailing in attribute
} />

text {foo()
// trailing in text expression
} text

{foo() /* same line block comment stays */}

<Wrapper>
{foo()
// trailing inside JSX children
}
</Wrapper>

<A prop={foo?.bar // trailing comment after optional chain
} />

=====================================output=====================================
{/**
* leading JSDoc
*/
foo()}

{
// leading line comment
foo()
}

text {/* leading */ foo()} text

text {
// leading line comment in text expression
foo()
} text

{/**
* some JSDoc
*/
here.is.some.expression()

/**
* @param {unknown} x
*/}

export function f(x) {}

{
foo()
// trailing line comment
}

{
foo() // same line comment
}

<A b={foo()
// trailing in attribute
} />

text {
foo()
// trailing in text expression
} text

{foo() /* same line block comment stays */}

<Wrapper>
  {
  foo()
// trailing inside JSX children
  }
</Wrapper>

<A prop={foo?.bar // trailing comment after optional chain
} />

================================================================================
`;

exports[`expression-comments.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
/**
 * leading JSDoc
 */
foo()}

{// leading line comment
foo()}

text {/* leading */ foo()} text

text {
// leading line comment in text expression
foo()
} text

{
/**
 * some JSDoc
 */
here.is.some.expression()

/**
 * @param {unknown} x
 */}
export function f(x) {}

{foo()
// trailing line comment
}

{foo() // same line comment
}

<A b={foo()
// trailing in attribute
} />

text {foo()
// trailing in text expression
} text

{foo() /* same line block comment stays */}

<Wrapper>
{foo()
// trailing inside JSX children
}
</Wrapper>

<A prop={foo?.bar // trailing comment after optional chain
} />

=====================================output=====================================
{
  /**
   * leading JSDoc
   */
  foo()
}

{
  // leading line comment
  foo()
}

text {/* leading */ foo()} text

text {
  // leading line comment in text expression
  foo()
} text

{
  /**
   * some JSDoc
   */
  here.is.some.expression()

  /**
   * @param {unknown} x
   */
}

export function f(x) {}

{
  foo()
  // trailing line comment
}

{
  foo() // same line comment
}

<A
  b={
    foo()
    // trailing in attribute
  }
/>

text {
  foo()
  // trailing in text expression
} text

{foo() /* same line block comment stays */}

<Wrapper>
  {
    foo()
    // trailing inside JSX children
  }
</Wrapper>

<A
  prop={
    foo?.bar // trailing comment after optional chain
  }
/>

================================================================================
`;

exports[`nested-comment.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{foo(
// nested comment
bar
)}

{/**
 * leading
 */ [/* inner */]}

{[/* inner */] /**
 * trailing
 */}

{/**
 * leading
 */ foo(/* inner */)}

{({/* inner */}) /**
 * trailing
 */}

{[// inner
]}

=====================================output=====================================
{
foo(
// nested comment
bar
)
}

{/**
* leading
*/ [/* inner */]}

{[/* inner */] /**
* trailing
*/}

{/**
* leading
*/ foo(/* inner */)}

{({/* inner */}) /**
* trailing
*/}

{
[// inner
]
}

================================================================================
`;

exports[`nested-comment.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{foo(
// nested comment
bar
)}

{/**
 * leading
 */ [/* inner */]}

{[/* inner */] /**
 * trailing
 */}

{/**
 * leading
 */ foo(/* inner */)}

{({/* inner */}) /**
 * trailing
 */}

{[// inner
]}

=====================================output=====================================
{foo(
  // nested comment
  bar,
)}

{
  /**
   * leading
   */ [/* inner */]
}

{
  [/* inner */] /**
   * trailing
   */
}

{
  /**
   * leading
   */ foo(/* inner */)
}

{
  {/* inner */} /**
   * trailing
   */
}

{
  [
    // inner
  ]
}

================================================================================
`;
